@@ -29,6 +29,6 @@ importFrom(stats, lm, pnorm, quantile)
 importFrom(stats, as.formula, setNames)
 
 importFrom(parallel, makeCluster, clusterExport, clusterEvalQ, clusterCall, stopCluster)
-importFrom(stats, sd, rnorm, rexp, runif, optim, optimHess, dnorm)
+importFrom(stats, sd, rnorm, rexp, runif, rbinom, optim, optimHess, dnorm)
 
 importFrom(graphics, abline, contour, image, lines, par, plot, title, strheight, text)
